@@ -1,4 +1,10 @@
 2011-08-19  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/bind.c, ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/ocinumber.c,
+	  lib/oci8/properties.rb: Decimal to float and float to decimal conversions
+	    are done as exactly ruby does by default. The behavior is customizable by
+	    OCI8.properties[:float_conversion_type].
+
+2011-08-19  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/oraconf.rb: fix a bug not to find the OCI library location listed in
 	    'ldconfig -p' when LD_LIBRARY_PATH is set.
 	    (Reported by Edgars Beigarts.)
